# VoltageCloud

./: .coverage  .env.template  .gitignore  DATA_LAKE_ACCESS_GUIDE.md  DEVICE_AUTO_REGISTRATION_GUIDE.md  Dockerfile  EMS_DEVELOPMENT_GUIDE.md  EMS_ECS_ARCHITECTURE.md  EMS_PAGE_STRUCTURE.md  EMS_VUE_GRAFANA_ARCHITECTURE.md  ENVIRONMENT_VARIABLES_GUIDE.md  IOT_PLATFORM_ARCHITECTURE.md  Makefile  PLATFORM_FEATURES.md  PROJECT_SUMMARY.md  README.md  README_DETAILED.md  TESTING_GUIDE.md  app.py  aws_iot_architecture_setup.py  cdk.json  check_env.py  check_permissions.py  check_role_permissions.py  cleanup.sh  create_test_device.py  delete_old_files.py  deploy_with_uv.sh  device_auto_registration.py  docker-compose.yml  ems-dev.sh  ems-docker-compose.yml  environment-testing.yml  fixed_lambda_function.py  iot_device_simulator.py  limited_iot_setup.py  monitor_data_flow.py  requirements.txt  run_all_tests.py  run_device_locally.py  (+4 more)
config/: iot_architecture_config.py
ems-backend/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  README.md  package-lock.json  package.json  start-dev.sh  test-aws-connection.ts  test-backend-api.sh  tsconfig.json
ems-frontend/: package.json
ems-infrastructure/: ecs-setup.py
ems-vue-frontend/: index.html  package-lock.json  package.json  vite.config.ts
iot_poc/: __init__.py  auth_stack.py  data_lake_stack.py  device_shadow_stack.py  ecs_api_stack.py  iot_poc_stack.py  ota_stack.py
lambda/: api_integration.py  auth_manager.py  data_lake_api.py  ota_manager.py  processor.py  (+1 more)
rust-lambda/: Cargo.toml
rust-lambda/src/: main.rs
(+76 files in other folders)
