[package]
name = "iot-poc-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
lambda_web = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
aws-sdk-timestream = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-types = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs" 